--- a/prizma/sass/blocks/form.scss
+++ b/prizma/sass/blocks/form.scss
@@ -1,17 +1,37 @@
 .form {
   width: 725px;
   padding: 40px 30px;
+}
+
+.form__flex {
+  display: flex;
+  // justify-content: space-between;
+  margin: 0 0 20px 0;
   
-  label {
-    margin: 0 0 0 20px;
-    font-family: 'ProximaNova-Bold', sans-serif;
+  &:last-child {
+    margin: 0;
+  }
+}
+
+.form__label {
+  margin: 0 30px 0 0;
+  text-indent: 20px;
+  font-family: 'ProximaNova-Bold', sans-serif;
+  
+  &--password {
+    position: relative;
+  }
+  
+  &:last-child {
+    margin: 0;
   }
 }
 
 .form__select {
   display: block;
+  height: 35px;
   margin: 5px 0 0 0;
-  padding: 10px 20px;
+  padding: 0 20px;
   font-size: 14px;
   font-family: 'ProximaNova-Regular', sans-serif;
   border: 2px solid $sc;
@@ -22,7 +42,93 @@
   appearance: none;
   
   &--title {
-    width: 170px;
-    background-position-x: 150px; 
+    width: 125px;
+    background-position-x: 95px; 
+  }
+  
+  &--country {
+    width: 265px;
+    background-position-x: 235px; 
+  }
+  
+  &--phone {
+    width: 130px;
+    background-position-x: 100px; 
+  }
+  
+  &--account {
+    width: 348px;
+    background-position-x: 315px; 
+  }
+  
+  &:focus {
+    box-shadow: 0px 1px 8px 0px rgba(193, 186, 255, 0.5);
+  }
+}
+
+.form__input {
+  display: block;
+  height: 31px;
+  margin: 5px 0 0 0;
+  padding: 0 20px;
+  font-size: 14px;
+  font-family: 'ProximaNova-Regular', sans-serif;
+  border: 2px solid $sc;
+  border-radius: 17px;
+  transition: 0.3s;
+  outline: none;
+  
+  &--small {
+    width: 226px;
+  }
+  
+  &--big {
+    width: 304px;
+  }
+  
+  &::placeholder {
+    color: #000;
+  }
+  
+  &:focus {
+    box-shadow: 0px 1px 8px 0px rgba(193, 186, 255, 0.5);
+  }
+}
+
+.form__warning {
+  padding: 0 0 0 10px;
+  color: #999999;
+  font-size: 13px;
+  font-family: 'ProximaNova-Regular', sans-serif;
+  background: url('../img/form-lock.svg') no-repeat left;
+  background-size: 8px;
+}
+
+.form__name {
+  margin: 25px 0 15px 20px;
+  font-size: 16px;
+  font-weight: normal;
+  font-family: 'ProximaNova-Bold', sans-serif;
+  text-transform: uppercase;
+}
+
+.form__switch {
+  position: absolute;
+  top: 35px;
+  right: 20px;
+  width: 20px;
+  height: 16px;
+  border: none;
+  background: transparent;
+  transition: 0.5s;
+  outline: none;
+  cursor: pointer;
+  
+  &--close {
+    background: transparent url('../img/form-password-close.svg') no-repeat center;
+  }
+  
+  &--open {
+    background: transparent url('../img/form-password-open.svg') no-repeat center;
   }
 }
