--- a/prizma/css/style.css
+++ b/prizma/css/style.css
@@ -1477,6 +1477,10 @@ body {
   display: -ms-flexbox;
   display: flex;
   margin: 0 0 20px 0; }
+  .form__flex--right {
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
+    justify-content: flex-end; }
   .form__flex:last-child {
     margin: 0; }
 
@@ -1579,3 +1583,20 @@ body {
     background: transparent url("../img/form-password-close.svg") no-repeat center; }
   .form__switch--open {
     background: transparent url("../img/form-password-open.svg") no-repeat center; }
+
+.form__submit {
+  width: 348px;
+  height: 35px;
+  color: #fff;
+  font-size: 14px;
+  font-family: 'ProximaNova-Regular', sans-serif;
+  border: none;
+  border-radius: 17px;
+  background: #1600e6;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  cursor: pointer;
+  outline: none; }
+  .form__submit:hover {
+    -webkit-box-shadow: 0px 0px 11px 5px rgba(22, 0, 230, 0.3);
+    box-shadow: 0px 0px 11px 5px rgba(22, 0, 230, 0.3); }
