--- a/prizma/sass/blocks/form.scss
+++ b/prizma/sass/blocks/form.scss
@@ -8,6 +8,10 @@
   // justify-content: space-between;
   margin: 0 0 20px 0;
   
+  &--right {
+    justify-content: flex-end;
+  }
+  
   &:last-child {
     margin: 0;
   }
@@ -130,5 +134,23 @@
   
   &--open {
     background: transparent url('../img/form-password-open.svg') no-repeat center;
+  }
+}
+
+.form__submit {
+  width: 348px;
+  height: 35px;
+  color: #fff;
+  font-size: 14px;
+  font-family: 'ProximaNova-Regular', sans-serif;
+  border: none;
+  border-radius: 17px;
+  background: $sc;
+  transition: 0.3s;
+  cursor: pointer;
+  outline: none;
+  
+  &:hover {
+    box-shadow: 0px 0px 11px 5px rgba(22, 0, 230, 0.3);
   }
 }
