--- a/prizma/css/style.css
+++ b/prizma/css/style.css
@@ -116,6 +116,8 @@ body {
     position: relative;
     left: 15px;
     display: block; }
+  .header--scroll .header__language {
+    margin: 0 0 0 40px; }
   .header--scroll .header__search {
     display: none; }
   .header--scroll .nav {
@@ -165,13 +167,10 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  width: 120px;
+  width: 220px;
   margin: 0;
   padding: 0;
   list-style: none; }
@@ -1580,8 +1579,8 @@ body {
     width: 348px;
     background-position-x: 315px; }
   .form__select:focus {
-    -webkit-box-shadow: 0px 1px 8px 0px rgba(193, 186, 255, 0.5);
-    box-shadow: 0px 1px 8px 0px rgba(193, 186, 255, 0.5); }
+    -webkit-box-shadow: 0px 0px 10px 5px rgba(193, 186, 255, 0.5);
+    box-shadow: 0px 0px 10px 5px rgba(193, 186, 255, 0.5); }
 
 .form__input {
   display: block;
@@ -1608,8 +1607,8 @@ body {
   .form__input::placeholder {
     color: #000; }
   .form__input:focus {
-    -webkit-box-shadow: 0px 1px 8px 0px rgba(193, 186, 255, 0.5);
-    box-shadow: 0px 1px 8px 0px rgba(193, 186, 255, 0.5); }
+    -webkit-box-shadow: 0px 0px 10px 5px rgba(193, 186, 255, 0.5);
+    box-shadow: 0px 0px 10px 5px rgba(193, 186, 255, 0.5); }
 
 .form__warning {
   padding: 0 0 0 10px;
@@ -1634,14 +1633,17 @@ body {
   height: 16px;
   border: none;
   background: transparent;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
   outline: none;
   cursor: pointer; }
   .form__switch--close {
     background: transparent url("../img/form-password-close.svg") no-repeat center; }
   .form__switch--open {
     background: transparent url("../img/form-password-open.svg") no-repeat center; }
+  .form__switch:focus {
+    -webkit-transform: scale(1.3);
+    transform: scale(1.3); }
 
 .form__submit {
   width: 348px;
@@ -1657,6 +1659,9 @@ body {
   cursor: pointer;
   outline: none; }
   .form__submit:hover {
+    -webkit-box-shadow: 0px 0px 11px 5px rgba(22, 0, 230, 0.3);
+    box-shadow: 0px 0px 11px 5px rgba(22, 0, 230, 0.3); }
+  .form__submit:focus {
     -webkit-box-shadow: 0px 0px 11px 5px rgba(22, 0, 230, 0.3);
     box-shadow: 0px 0px 11px 5px rgba(22, 0, 230, 0.3); }
 
