--- a/prizma/sass/blocks/form.scss
+++ b/prizma/sass/blocks/form.scss
@@ -66,7 +66,7 @@
   }
   
   &:focus {
-    box-shadow: 0px 1px 8px 0px rgba(193, 186, 255, 0.5);
+    box-shadow: 0px 0px 10px 5px rgba(193, 186, 255, 0.5);
   }
 }
 
@@ -95,7 +95,7 @@
   }
   
   &:focus {
-    box-shadow: 0px 1px 8px 0px rgba(193, 186, 255, 0.5);
+    box-shadow: 0px 0px 10px 5px rgba(193, 186, 255, 0.5);
   }
 }
 
@@ -124,7 +124,7 @@
   height: 16px;
   border: none;
   background: transparent;
-  transition: 0.5s;
+  transition: 0.3s;
   outline: none;
   cursor: pointer;
   
@@ -134,6 +134,10 @@
   
   &--open {
     background: transparent url('../img/form-password-open.svg') no-repeat center;
+  }
+  
+  &:focus {
+    transform: scale(1.3);
   }
 }
 
@@ -151,6 +155,10 @@
   outline: none;
   
   &:hover {
+    box-shadow: 0px 0px 11px 5px rgba(22, 0, 230, 0.3);
+  }
+  
+  &:focus {
     box-shadow: 0px 0px 11px 5px rgba(22, 0, 230, 0.3);
   }
 }
