--- a/prizma/sass/blocks/client.scss
+++ b/prizma/sass/blocks/client.scss
@@ -33,6 +33,13 @@
   }
 }
 
+.client__info--login {
+  
+  p {
+    margin: 25px 0 40px 0;
+  }
+}
+
 .client__flex {
   display: flex;
   justify-content: space-between;
