--- a/prizma/sass/blocks/header.scss
+++ b/prizma/sass/blocks/header.scss
@@ -195,6 +195,7 @@
       width: 100%;
       margin: 0;
       padding: 30px 0;
+      box-shadow: none;
     }
     
     .nav__list {
@@ -233,13 +234,28 @@
     width: 30px;
   }
   
-  .header__menu {
+  .header__language,
+  .header__search {
     display: none;
   }
   
-  .header__language,
-  .header__search,
   .header__user {
-    display: none;
+    position: absolute;
+    top: 120px;
+    left: 0;
+    flex-direction: column;
+    width: 100%;
+    padding: 30px 0;
+    border-top: 1px solid #61a3db;
+    background: #fff;
+    box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
+    transition: 0.3s linear;
+    opacity: 0;
+    clip: rect(0, 0, 0, 0);
+    
+    &--active {
+      opacity: 1;
+      clip: auto;
+    }
   }
 }
