--- a/prizma/css/style.css
+++ b/prizma/css/style.css
@@ -1127,6 +1127,17 @@ body {
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%); }
 
+.inner__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
 .inner__content {
   padding: 30px 0 150px 0; }
   .inner__content--accounts {
@@ -1146,7 +1157,7 @@ body {
     background: #fff url("../img/templates-bg.svg") no-repeat center; }
 
 .inner__subtext {
-  margin: 0;
+  margin: 0 0 10px 0;
   font-size: 18px;
   font-family: 'ProximaNova-LightIt', serif;
   text-align: center; }
@@ -1177,6 +1188,9 @@ body {
 .inner__list {
   font-family: 'ProximaNova-Regular', sans-serif;
   list-style: url("../img/list.svg"); }
+
+.inner__button {
+  margin: 50px auto 0; }
 
 @media screen and (max-width: 768px) {
   .inner__header {
@@ -1241,6 +1255,23 @@ body {
     font-family: 'ProximaNova-Bold', sans-serif;
     -webkit-transition: 0.5s;
     transition: 0.5s; }
+
+.table__wrapper {
+  height: 200px;
+  margin: 50px 0;
+  overflow: scroll; }
+
+.table--spread {
+  margin: 0;
+  text-align: center; }
+  .table--spread th {
+    padding: 30px 0;
+    color: #da2f69;
+    font-size: 14px;
+    font-family: 'ProximaNova-Bold', sans-serif; }
+  .table--spread td {
+    font-size: 12px;
+    font-family: 'ProximaNova-Regular', sans-serif; }
 
 .table__button {
   display: block;
