--- a/prizma/templates/careers.html
+++ b/prizma/templates/careers.html
@@ -57,16 +57,16 @@
           <li>
             <a class="nav__item">Accounts</a>
             <ul class="nav__sublist">
-              <li><a class="nav__subitem" href="#">Trade with us</a></li>
+              <li><a class="nav__subitem" href="../accounts/trade-with-prizmafx.html">Trade with us</a></li>
               <li><a class="nav__subitem" href="../accounts/account-types.html">Account types</a></li>
-              <li><a class="nav__subitem" href="#">Segregated accounts</a></li>
+              <li><a class="nav__subitem" href="../accounts/segregated-accounts.html">Segregated accounts</a></li>
               <li><a class="nav__subitem" href="../client/register.html">Open live account</a></li>
             </ul>
           </li>
           <li>
             <a class="nav__item">Platforms</a>
             <ul class="nav__sublist">
-              <li><a class="nav__subitem" href="#">PrizmaFX MetaTrader 4</a></li>
+              <li><a class="nav__subitem" href="../platfroms/metatrader.html">PrizmaFX MetaTrader 4</a></li>
               <li><a class="nav__subitem" href="../platforms/webtrader.html">WebTrader</a></li>
               <li><a class="nav__subitem" href="#">Trade Mobile</a></li>
             </ul>
@@ -74,11 +74,11 @@
           <li>
             <a class="nav__item">Tools</a>
             <ul class="nav__sublist">
-              <li><a class="nav__subitem" href="#">Spread and trading</a></li>
+              <li><a class="nav__subitem" href="../tools/spread-and-trading-hours.html">Spread and trading</a></li>
               <li><a class="nav__subitem" href="../tools/glossary.html">Glossary</a></li>
-              <li><a class="nav__subitem" href="#">Forex Signals</a></li>
-              <li><a class="nav__subitem" href="#">Faq</a></li>
-              <li><a class="nav__subitem" href="#">Account funding</a></li>
+              <li><a class="nav__subitem" href="../tools/forex-signals.html">Forex Signals</a></li>
+              <li><a class="nav__subitem" href="../tools/account-faq.html">Account FAQ</a></li>
+              <li><a class="nav__subitem" href="../tools/account-funding.html">Account funding</a></li>
             </ul>
           </li>
         </ul>
