--- a/prizma/sass/blocks/inner.scss
+++ b/prizma/sass/blocks/inner.scss
@@ -67,7 +67,7 @@
   
   &--templates {
     padding: 100px 0;
-    background: #fff url('../img/templates-bg.svg') no-repeat center;
+    background: #fff url('../img/templates-bg.svg') center;
   }
 }
 
