--- a/prizma/templates/anti-money-laundering.html
+++ b/prizma/templates/anti-money-laundering.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>MetaTrader - PrizmaFX</title>
+  <title>Anti-Money Laundering - PrizmaFX</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
@@ -66,9 +66,9 @@
           <li>
             <a class="nav__item">Platforms</a>
             <ul class="nav__sublist">
-              <li><a class="nav__subitem  nav__subitem--active">PrizmaFX MetaTrader 4</a></li>
-              <li><a class="nav__subitem" href="webtrader.html">WebTrader</a></li>
-              <li><a class="nav__subitem" href="mobile.html">Trade Mobile</a></li>
+              <li><a class="nav__subitem" href="../platforms/metatrader.html">PrizmaFX MetaTrader 4</a></li>
+              <li><a class="nav__subitem" href="../platforms/webtrader.html">WebTrader</a></li>
+              <li><a class="nav__subitem" href="../platforms/mobile.html">Trade Mobile</a></li>
             </ul>
           </li>
           <li>
@@ -89,29 +89,26 @@
     <header class="inner__header">
       <div class="container">
         <div class="inner__title">
-          <h1>MetaTrader</h1>
-          <h2>MetaTrader</h2>
+          <h1>Anti-Money Laundering</h1>
+          <h2>Anti-Money Laundering</h2>
         </div>
       </div>
     </header>
-    <div class="inner__content  inner__content--platforms">
+    <div class="inner__content  inner__content--templates">
       <div class="container">
-        <p class="inner__subtext">The PrizmaFX Meta Trader Four provides the optimal platform for making the most out of Forex trading</p>
-        <p class="inner__text">MT4 is a globally acclaimed software made specifically for the purpose of delivering the best Forex experience, along with Commodities, Futures and different tradeable assets. It is perfect for new traders, as well as seasoned veterans, because it covers all aspects of the trading process. Due to its reliability, easiness of use, timely access to vital information and trading strategies, along with the latest economic data and occurrences, MT4 is considered to be the leading platform worldwideе.</p>
-        <b class="inner__name  inner__name--big">Meta Trader Four gives you the opportunity to:</b>
-        <div class="inner__flex">
-          <ul class="inner__list">
-            <li>Invest in a wide variety of Currencies, Commodities and Futures</li>
-            <li>Make analysis of securities quotes</li>
-            <li>Create a trading strategy</li>
-            <li>Use your mobile phone to trade, no matter where you are</li>
-            <li>Look at many charts at the same time</li>
-            <li>Make customizations to the screens</li>
-            <li>Get support for many currencies</li>
-            <li>Choose from a wide number of support languages</li>
-          </ul>
-          <a class="button  button--blue" href="../img/tradingtechnologies4setup.zip">Download</a>
-        </div>
+        <p class="inner__text">PrizmaFX puts a strong emphasis on counter-money laundering and takes it very seriously. The platform strongly abides by the AML terms, and as a prominent and global forex platform, it stands as firm opposition against money laundering. The following protocol has been made for the purpose of keeping any money laundering activities from happening and providing timely information on the matter. PrizmaFX encourages its users to read the protocol against money laundering and let us know in case there are any unclear points.</p>
+        <b class="inner__name  inner__name--big">The meaning of money laundering?</b>
+        <p class="inner__text">The concealment of any illegal money by moving them to a legally valid place or financial institution, unnoticed and hidden from the eye of the law.</p>
+        <p class="inner__text">It is possible that funds moved to lawful financial institutions by members of terrorist organizations can be used to buy goods or services to be utilized in unlawful actions or to aid other similar activities.</p>
+        <p class="inner__text">PrizmaFX abides by all legal restrictions and is going to notify about all effort of any company, entity or person to hide the possession or source of any funds obtained by unlawful actions. The following are also contained: fraudulent actions, unlawful gambling, stealing, anything drug related and others.</p>
+        <b class="inner__name  inner__name--big">For what reasons do we need to verify your identity when trading?</b>
+        <p class="inner__text">Every PrizmaFX client is obliged to provide verification of his identity along with a proven source of income. The client has to give some form of ID in order to verify his name, place of residence and other relevant info.</p>
+        <b class="inner__name  inner__name--big">Which documents are necessary for verifying the identity?</b>
+        <ul class="inner__list">
+          <li>Legal ID document.</li>
+          <li>Duplicate of a utility payment. It must have the client`s name and address.</li>
+          <li>The user has to distinctly show the name of the recipient when filling in the PrizmaFX contract. The name on the contract should be the same as the one of the account recipient and the one on the identification papers. Also, any withdrawals should go to the same recipient.</li>
+        </ul>
       </div>
     </div>
   </section>
@@ -134,7 +131,7 @@
         <ul class="footer__links">
           <li><a href="#">Licenses</a></li>
           <li>|</li>
-          <li><a href="account-types.html">Account Types</a></li>
+          <li><a>Account Types</a></li>
           <li>|</li>
           <li><a href="#">Funding & Withdrawal</a></li>
           <li>|</li>
