--- a/prizma/templates/indices.html
+++ b/prizma/templates/indices.html
@@ -66,9 +66,9 @@
           <li>
             <a class="nav__item">Platforms</a>
             <ul class="nav__sublist">
-              <li><a class="nav__subitem" href="../platfroms/metatrader.html">PrizmaFX MetaTrader 4</a></li>
+              <li><a class="nav__subitem" href="../platforms/metatrader.html">PrizmaFX MetaTrader 4</a></li>
               <li><a class="nav__subitem" href="../platforms/webtrader.html">WebTrader</a></li>
-              <li><a class="nav__subitem" href="#">Trade Mobile</a></li>
+              <li><a class="nav__subitem" href="../platforms/mobile.html">Trade Mobile</a></li>
             </ul>
           </li>
           <li>
@@ -96,7 +96,7 @@
     </header>
     <div class="inner__content  inner__content--templates">
       <div class="container">
-        <p class="inner__text">MultiplyMarket offers to invest in indices from any place in the globe in super flexible and easy way. An index is a general performance indicator for the essential cluster of stocks which can be sorted by location, exchange point or many other things. Major Stock Index section is responsible for this and it also supports traders to see how a certain stock group is forming. Among many of others, you can find the most traded indices such as the NASDAQ, S&P 500, FTSE and the Dow Jones.</p>
+        <p class="inner__text">PrizmaFX offers to invest in indices from any place in the globe in super flexible and easy way. An index is a general performance indicator for the essential cluster of stocks which can be sorted by location, exchange point or many other things. Major Stock Index section is responsible for this and it also supports traders to see how a certain stock group is forming. Among many of others, you can find the most traded indices such as the NASDAQ, S&P 500, FTSE and the Dow Jones.</p>
       </div>
     </div>
   </section>
