--- a/prizma/templates/kyc.html
+++ b/prizma/templates/kyc.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>MetaTrader - PrizmaFX</title>
+  <title>KYC - PrizmaFX</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
@@ -66,9 +66,9 @@
           <li>
             <a class="nav__item">Platforms</a>
             <ul class="nav__sublist">
-              <li><a class="nav__subitem  nav__subitem--active">PrizmaFX MetaTrader 4</a></li>
-              <li><a class="nav__subitem" href="webtrader.html">WebTrader</a></li>
-              <li><a class="nav__subitem" href="mobile.html">Trade Mobile</a></li>
+              <li><a class="nav__subitem" href="../platforms/metatrader.html">PrizmaFX MetaTrader 4</a></li>
+              <li><a class="nav__subitem" href="../platforms/webtrader.html">WebTrader</a></li>
+              <li><a class="nav__subitem" href="../platforms/mobile.html">Trade Mobile</a></li>
             </ul>
           </li>
           <li>
@@ -89,29 +89,35 @@
     <header class="inner__header">
       <div class="container">
         <div class="inner__title">
-          <h1>MetaTrader</h1>
-          <h2>MetaTrader</h2>
+          <h1>KYC</h1>
+          <h2>KYC</h2>
         </div>
       </div>
     </header>
-    <div class="inner__content  inner__content--platforms">
+    <div class="inner__content  inner__content--templates">
       <div class="container">
-        <p class="inner__subtext">The PrizmaFX Meta Trader Four provides the optimal platform for making the most out of Forex trading</p>
-        <p class="inner__text">MT4 is a globally acclaimed software made specifically for the purpose of delivering the best Forex experience, along with Commodities, Futures and different tradeable assets. It is perfect for new traders, as well as seasoned veterans, because it covers all aspects of the trading process. Due to its reliability, easiness of use, timely access to vital information and trading strategies, along with the latest economic data and occurrences, MT4 is considered to be the leading platform worldwideе.</p>
-        <b class="inner__name  inner__name--big">Meta Trader Four gives you the opportunity to:</b>
-        <div class="inner__flex">
-          <ul class="inner__list">
-            <li>Invest in a wide variety of Currencies, Commodities and Futures</li>
-            <li>Make analysis of securities quotes</li>
-            <li>Create a trading strategy</li>
-            <li>Use your mobile phone to trade, no matter where you are</li>
-            <li>Look at many charts at the same time</li>
-            <li>Make customizations to the screens</li>
-            <li>Get support for many currencies</li>
-            <li>Choose from a wide number of support languages</li>
-          </ul>
-          <a class="button  button--blue" href="../img/tradingtechnologies4setup.zip">Download</a>
-        </div>
+        <p class="inner__text">Know your customer policies have become increasingly important worldwide lately, especially among banks and other financial institutions, in order to prevent identity theft, money laundering, financial fraud and terrorist activity.</p>
+        <p class="inner__text">PrizmaFX holds a zero tolerance fraud policy and is taking all measures possible to prevent it. Any fraudulent activity will be documented and all related accounts to it will be immediately closed. All funds in these accounts will be forfeited.</p>
+        <b class="inner__name  inner__name--big">Prevention:</b>
+        <p class="inner__text">PrizmaFX aims to ensure the integrity of any sensitive data it obtains, such as your account information and the transactions you make, using a variety of security measures and fraud controls. Securing your electronic transactions requires us to be provided with certain data from you, including your preferred deposit method.</p>
+        <b class="inner__name  inner__name--big">When you deposit funds we will require the following documents:</b>
+        <ul class="inner__list">
+          <li>A copy of your valid passport with the signature page</li>
+          <li>Copies of your credit cards used to make the deposit (The front side with only the 4 last digits visible, backside with the CVV covered)</li>
+          <li>A copy of a recent utility bill in your name and address</li>
+          <li>A signed purchase history of your online transactions</li>
+        </ul>
+        <b class="inner__name  inner__name--big">If you have any questions please don’t hesitate to contact our customer support:</b>
+        <p class="inner__text">support@PrizmaFX.com</p>
+        <b class="inner__name  inner__name--big">When do I need to provide these documents?</b>
+        <p class="inner__text">We highly appreciate you taking the time to provide us with all the necessary documents as soon as you can, in order to avoid any delays in processing your transactions. We require the receipt of all the necessary documents prior to making any cash transactions to your benefit.</p>
+        <p class="inner__text">Some circumstances may require us to request these documents before allowing any other activities in your account, such as deposits or trades.</p>
+        <p class="inner__text">Please note that if we will not receive the required documents on file, your pending withdrawals will be canceled and credited back to your trading account. We will notify you in such event via our system.</p>
+        <b class="inner__name  inner__name--big">How can I send you these documents?</b>
+        <p class="inner__text">Please scan your documents, or take a high-quality digital camera picture, save the images as jpegs, then send it to us via mail to support@PrizmaFX.com</p>
+        <p class="inner__text">How do I know my documents are safe with you?</p>
+        <p class="inner__text">PrizmaFX holds the security of documentation with the highest priority and treats all documents it receives with utmost respect and confidentiality. All files we obtain are fully protected using the highest level possible of encryption at every step of the review process.</p>
+        <p class="inner__text">We thank you for your cooperation in helping us make PrizmaFX a safer place to trade.</p>
       </div>
     </div>
   </section>
@@ -134,7 +140,7 @@
         <ul class="footer__links">
           <li><a href="#">Licenses</a></li>
           <li>|</li>
-          <li><a href="account-types.html">Account Types</a></li>
+          <li><a>Account Types</a></li>
           <li>|</li>
           <li><a href="#">Funding & Withdrawal</a></li>
           <li>|</li>
