--- a/prizma/templates/faq.html
+++ b/prizma/templates/faq.html
@@ -66,9 +66,9 @@
           <li>
             <a class="nav__item">Platforms</a>
             <ul class="nav__sublist">
-              <li><a class="nav__subitem" href="../platfroms/metatrader.html">PrizmaFX MetaTrader 4</a></li>
+              <li><a class="nav__subitem" href="../platforms/metatrader.html">PrizmaFX MetaTrader 4</a></li>
               <li><a class="nav__subitem" href="../platforms/webtrader.html">WebTrader</a></li>
-              <li><a class="nav__subitem" href="#">Trade Mobile</a></li>
+              <li><a class="nav__subitem" href="../platforms/mobile.html">Trade Mobile</a></li>
             </ul>
           </li>
           <li>
@@ -100,12 +100,12 @@
         <p class="inner__text">There is no minimum to open a new account; however, a $2,000 deposit is required to be considered for margin and options privileges, regardless of any promotional offer.</p>
         <b class="inner__name  inner__name--big">What is the fastest way to open a new account?</b>
         <p class="inner__text">Opening an account online is the fastest way to open and fund an account. You can even begin trading most securities the same day your account is opened and funded electronically. We work 24 hours a day, 7 days a week.</p>
-        <b class="inner__name  inner__name--big">What types of investments can I make with a MultiplyMarket account?</b>
-        <p class="inner__text">MultiplyMarket offers a comprehensive and diverse selection of investment products. You can trade stocks, options, mutual funds, ETFs, futures, forex, and bonds and CDs in a standard account. Please note that investment choices may vary in less common account types such as Trust accounts, 529 education accounts, and pension plans. Each plan will specify what types of investments are allowed. See Account Types and Investment Products for more information.</p>
+        <b class="inner__name  inner__name--big">What types of investments can I make with a PrizmaFX account?</b>
+        <p class="inner__text">PrizmaFX offers a comprehensive and diverse selection of investment products. You can trade stocks, options, mutual funds, ETFs, futures, forex, and bonds and CDs in a standard account. Please note that investment choices may vary in less common account types such as Trust accounts, 529 education accounts, and pension plans. Each plan will specify what types of investments are allowed. See Account Types and Investment Products for more information.</p>
         <p class="inner__text">Yes. As you’re completing the Account Application, simply complete the margin and/or options section. We’ll review the information, and if appropriate, extend margin and/or options privileges to your account.</p>
         <p class="inner__text">Margin and options trading pose additional investment risks and are not suitable for all investors. In addition, certain account types may not be eligible for margin, options, or advanced options trading privileges. Please read Characteristics and Risks of Standardized Options, Margin Disclosure Document, Margin Account Handbook, and Day Trading Margin Requirements.</p>
         <b class="inner__name  inner__name--big">Can I write checks from my account?</b>
-        <p class="inner__text">MultiplyMarket has a comprehensive Cash Management offering. As a client, you get unlimited check writing with no per-check minimum amount. Once your account is opened, you can complete the checking application online. A Cash Management account also gives you access to free online bill pay, as well as a free debit card with nationwide rebates on all ATM fees.</p>
+        <p class="inner__text">PrizmaFX has a comprehensive Cash Management offering. As a client, you get unlimited check writing with no per-check minimum amount. Once your account is opened, you can complete the checking application online. A Cash Management account also gives you access to free online bill pay, as well as a free debit card with nationwide rebates on all ATM fees.</p>
         <b class="inner__name  inner__name--big">Do I earn interest in my account?</b>
         <p class="inner__text">Yes. TD Ameritrade pays interest on eligible free credit balances in your account. Simple interest is calculated on the entire daily balance and is credited to your account monthly. This service is subject to the current TD Ameritrade rates and policies, which may change without notice.</p>
         <b class="inner__name  inner__name--big">Are there restrictions on funds deposited into my account?</b>
