--- a/prizma/templates/risk-disclosure.html
+++ b/prizma/templates/risk-disclosure.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>MetaTrader - PrizmaFX</title>
+  <title>Risk Disclosure - PrizmaFX</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
@@ -66,9 +66,9 @@
           <li>
             <a class="nav__item">Platforms</a>
             <ul class="nav__sublist">
-              <li><a class="nav__subitem  nav__subitem--active">PrizmaFX MetaTrader 4</a></li>
-              <li><a class="nav__subitem" href="webtrader.html">WebTrader</a></li>
-              <li><a class="nav__subitem" href="mobile.html">Trade Mobile</a></li>
+              <li><a class="nav__subitem" href="../platforms/metatrader.html">PrizmaFX MetaTrader 4</a></li>
+              <li><a class="nav__subitem" href="../platforms/webtrader.html">WebTrader</a></li>
+              <li><a class="nav__subitem" href="../platforms/mobile.html">Trade Mobile</a></li>
             </ul>
           </li>
           <li>
@@ -89,29 +89,25 @@
     <header class="inner__header">
       <div class="container">
         <div class="inner__title">
-          <h1>MetaTrader</h1>
-          <h2>MetaTrader</h2>
+          <h1>Risk Disclosure</h1>
+          <h2>Risk Disclosure</h2>
         </div>
       </div>
     </header>
-    <div class="inner__content  inner__content--platforms">
+    <div class="inner__content  inner__content--templates">
       <div class="container">
-        <p class="inner__subtext">The PrizmaFX Meta Trader Four provides the optimal platform for making the most out of Forex trading</p>
-        <p class="inner__text">MT4 is a globally acclaimed software made specifically for the purpose of delivering the best Forex experience, along with Commodities, Futures and different tradeable assets. It is perfect for new traders, as well as seasoned veterans, because it covers all aspects of the trading process. Due to its reliability, easiness of use, timely access to vital information and trading strategies, along with the latest economic data and occurrences, MT4 is considered to be the leading platform worldwideе.</p>
-        <b class="inner__name  inner__name--big">Meta Trader Four gives you the opportunity to:</b>
-        <div class="inner__flex">
-          <ul class="inner__list">
-            <li>Invest in a wide variety of Currencies, Commodities and Futures</li>
-            <li>Make analysis of securities quotes</li>
-            <li>Create a trading strategy</li>
-            <li>Use your mobile phone to trade, no matter where you are</li>
-            <li>Look at many charts at the same time</li>
-            <li>Make customizations to the screens</li>
-            <li>Get support for many currencies</li>
-            <li>Choose from a wide number of support languages</li>
-          </ul>
-          <a class="button  button--blue" href="../img/tradingtechnologies4setup.zip">Download</a>
-        </div>
+        <p class="inner__text">Don`t forget that trading company shares, investing in currency and any other financial instrument has its definite risks and can result in losses for the user. The following announcement lists some of the hazards related to investing in financial assets. We would like you to go through the disclaimer and let us know in case you have any questions or uncertainties about it.</p>
+        <p class="inner__text">Because of the theoretical essence of Forex trading, it is possible that the user ends up losing all, or at least some of his money. In some cases, the amount of lost funds can be bigger than the first deposit. PrizmaFX highly recommends that the client uses a so-called risk capital for his investment purposes. Risk capital refers to money which is not important for covering the basic life needs of the client. In other words, it is money which you can afford to lose. It is also wise to make an assessment of what you want to achieve by trading Forex and how far you`re willing to go. Be aware of your own financial capabilities and try to find the approach to trading that works best for you.</p>
+        <p class="inner__text">In case you cannot fully comprehend the uncertainty behind Forex trading or any of the PrizmaFX terms and conditions, we advise you to abstain from trading on PrizmaFX. Along with all of the abovementioned factors, here are some additional risk-related factors you should have in mind:</p>
+        <ul class="inner__list">
+          <li>PrizmaFX might have an advantage with amounts that go over the amount of the user`s margin deposit and this might lead to losses bigger than the amount of the deposit.</li>
+          <li>Volatile market conditions and fluctuations, as well as building up of certain taxes and fees can lead to a funds deficit.</li>
+          <li>In some cases, it is not possible to start certain trades at the designated price or a conditional stop/limit or stop/loss procedure, due to unpredictable market circumstances. In those cases, the client might be asked to make a quick deposit. Should the client fail to make the deposit, he will be responsible for any negative funds on his account along with the cancellation of the trade.</li>
+          <li>The trading of currencies does not happen on an actual exchange market. There are sequences which are not traded very often. In some cases, there might be errors in the citation of prices because there is no other party. Such a trade might not be possible at the particular moment in time.</li>
+          <li>PrizmaFX does not provide any guidance or aiding information and might have interests different than those of the client. In some cases, PrizmaFX might serve as an opposing party of a trade or act in a disadvantageous for the user manner. In other words, in a trade where the client is selling an asset, PrizmaFX might be the buyer. The opposite situation is also possible. It is also possible that PrizmaFX sets the pricing for those trades, which might not reflect the best possible prices for the client and might differ from the prices offered to other clients.</li>
+          <li>The sudden closing of the client`s trades might occur in case of bankruptcy in PrizmaFX, an associate bank or any other party related to the trading process.</li>
+        </ul>        
+        <p class="inner__text">By using PrizmaFX and its services, the client agrees that he`s read and comprehended the risk announcement.</p>
       </div>
     </div>
   </section>
@@ -134,7 +130,7 @@
         <ul class="footer__links">
           <li><a href="#">Licenses</a></li>
           <li>|</li>
-          <li><a href="account-types.html">Account Types</a></li>
+          <li><a>Account Types</a></li>
           <li>|</li>
           <li><a href="#">Funding & Withdrawal</a></li>
           <li>|</li>
