--- a/prizma/templates/stocks.html
+++ b/prizma/templates/stocks.html
@@ -66,9 +66,9 @@
           <li>
             <a class="nav__item">Platforms</a>
             <ul class="nav__sublist">
-              <li><a class="nav__subitem" href="../platfroms/metatrader.html">PrizmaFX MetaTrader 4</a></li>
+              <li><a class="nav__subitem" href="../platforms/metatrader.html">PrizmaFX MetaTrader 4</a></li>
               <li><a class="nav__subitem" href="../platforms/webtrader.html">WebTrader</a></li>
-              <li><a class="nav__subitem" href="#">Trade Mobile</a></li>
+              <li><a class="nav__subitem" href="../platforms/mobile.html">Trade Mobile</a></li>
             </ul>
           </li>
           <li>
@@ -96,9 +96,9 @@
     </header>
     <div class="inner__content  inner__content--templates">
       <div class="container">
-        <p class="inner__text">Stocks CFD trading helps you to enter the many major stock markets from different countries avoiding large investments and gains bigger advantages that trading just with assets by themselves. MultiplyMarket arranges also many other benefits for traders, delivering them the premium terms for trade with no charges for almost all trading services. Low spread and the leverage will help you even maximize the profit.</p>
+        <p class="inner__text">Stocks CFD trading helps you to enter the many major stock markets from different countries avoiding large investments and gains bigger advantages that trading just with assets by themselves. PrizmaFX arranges also many other benefits for traders, delivering them the premium terms for trade with no charges for almost all trading services. Low spread and the leverage will help you even maximize the profit.</p>
         <p class="inner__text">The absence of short sales bounds, stock lending, and borrowing or other confines picture Stock CFD market very attractive for trading. You will be excited about you trading process that should rely on indecisive stock prices, fluctuating macro- and microeconomics factors and many others technological, political and natural processes.</p>
-        <p class="inner__text">Companies can increase their money income by launch selling their shares/stocks for growth, new products, development and so on to the public. Investors can take a revenue of the huge companies and gain a stock profit. Such giant companies, like Google, Apple, Intel and so on are selling their shares online. The forehand goal of MultiplyMarket is to make sure that all customers have the best support for successful trading results. Following that goal, we have developed for you this platform which is supplemented with all possible trading features, tools and provide you with all broadcasts and updated events by a team of our dedicated professionals.</p>
+        <p class="inner__text">Companies can increase their money income by launch selling their shares/stocks for growth, new products, development and so on to the public. Investors can take a revenue of the huge companies and gain a stock profit. Such giant companies, like Google, Apple, Intel and so on are selling their shares online. The forehand goal of PrizmaFX is to make sure that all customers have the best support for successful trading results. Following that goal, we have developed for you this platform which is supplemented with all possible trading features, tools and provide you with all broadcasts and updated events by a team of our dedicated professionals.</p>
       </div>
     </div>
   </section>
