--- a/bb/css/style.css
+++ b/bb/css/style.css
@@ -1015,6 +1015,17 @@ body {
   background: url("../img/email.svg") no-repeat center;
   background-size: cover; }
 
+.footer__skype {
+  position: fixed;
+  right: 50px;
+  bottom: 50px;
+  display: block;
+  width: 60px;
+  height: 60px;
+  background: url("../img/footer-skype.svg") no-repeat center;
+  -webkit-animation: skype 1s infinite alternate;
+  animation: skype 1s infinite alternate; }
+
 .bubble .lwc-chat-button {
   right: 50px !important;
   background: url("../img/footer-skype.svg") no-repeat center;
@@ -1056,6 +1067,11 @@ body {
   .footer__middle {
     width: auto;
     text-align: center; }
+  .footer__skype {
+    right: 15px;
+    bottom: 15px;
+    width: 50px;
+    height: 50px; }
   .bubble .lwc-chat-button {
     right: 15px !important;
     bottom: 15px !important;
