--- a/bb/sass/blocks/footer.scss
+++ b/bb/sass/blocks/footer.scss
@@ -68,6 +68,17 @@
   background-size: cover;
 }
 
+.footer__skype {
+  position: fixed;
+  right: 50px;
+  bottom: 50px;
+  display: block;
+  width: 60px;
+  height: 60px;
+  background: url('../img/footer-skype.svg') no-repeat center;
+  animation: skype 1s infinite alternate;
+}
+
 .bubble .lwc-chat-button {
   right: 50px !important; 
   background: url('../img/footer-skype.svg') no-repeat center;
@@ -114,6 +125,13 @@
   .footer__middle {
     width: auto;
     text-align: center;
+  }
+  
+  .footer__skype {
+    right: 15px;
+    bottom: 15px;
+    width: 50px;
+    height: 50px;
   }
   
   .bubble .lwc-chat-button {
