--- a/mm/templates/about-us.html
+++ b/mm/templates/about-us.html
@@ -32,7 +32,7 @@
                     <li><a>Trade with<br>MultiplyMarket</a></li>
                     <li><a href="account-types.html">Account types</a></li>
                     <li><a href="segregated.html">Segregated account</a></li>
-                    <li><a href="https://client.multiplymarket.com/en/members/register/real">Open live account</a></li>
+                    <li><a href="https://clients.multiplymarket.com/register">Open live account</a></li>
                 </ul>
               </li>
               <li>
@@ -55,8 +55,8 @@
               </li>
           </ul>
           <div class="main-nav__user  main-nav__user--temp">
-            <a class="button" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a>
-            <a class="button  button--blue" href="https://client.multiplymarket.com/en/members/login">Log In</a>
+            <a class="button" href="https://clients.multiplymarket.com/register">Open live account</a>
+            <a class="button  button--blue" href="https://clients.multiplymarket.com/">Log In</a>
             <a class="button  button--number" href="tel:++442038290032">+442038290032</a>
           </div>
         </nav>
@@ -66,7 +66,7 @@
       <div class="title  title--down">
         <h1>Trade with MultiplyMarket</h1>
         <p class="title__sub">MultiplyMarket presents its users with the optimal platform for investing in Forex, Futures and Commodities.<br>We are committed to providing each and every user with the best experience possible, and always aim to provide the necessary means and resources for successful trading.</p>
-        <a class="button  button--title" href="https://client.multiplymarket.com/en/members/register/real">Open account</a>
+        <a class="button  button--title" href="https://clients.multiplymarket.com/register">Open account</a>
       </div>
     </div>
   </section>
@@ -132,8 +132,8 @@
       <div class="footer__flex">
         <ul>
           <b>Account</b>
-          <li><a href="https://client.multiplymarket.com/en/members/login">Log In</a></li>
-          <li><a href="https://client.multiplymarket.com/en/members/register/real">Sign Up</a></li>
+          <li><a href="https://clients.multiplymarket.com/">Log In</a></li>
+          <li><a href="https://clients.multiplymarket.com/register">Sign Up</a></li>
         </ul>
         <ul>
           <b>About Us</b>
